update config for swagger railway
